<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_stack</name>
  <version>0.0.0</version>
  <description>Package that offers image processing tools for preprocessing, analysis, and machine learning capabilities.</description>
  <maintainer email="daniel27parra@gmail.com">Daniel Parra</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
    <rosidl_interface_packages>
    <depend>rosidl_default_runtime</depend>
  </rosidl_interface_packages>
  </export>
</package>
